--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html class="scroll-smooth" lang="en">
  <head> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-collapse.js?rwcache=777409227"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-focus.js?rwcache=777409227"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-intersect.js?rwcache=777409227"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-ui.js?rwcache=777409227"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/smoothscroll.min.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/gsap.min.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/ScrollTrigger.min.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/gsap-effects.js?rwcache=777409227"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-collapse.js?rwcache=777410508"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-focus.js?rwcache=777410508"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-intersect.js?rwcache=777410508"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-ui.js?rwcache=777410508"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/smoothscroll.min.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/gsap.min.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/ScrollTrigger.min.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/gsap-effects.js?rwcache=777410508"></script> 
   <meta charset="utf-8" /> 
   <meta http-equiv="x-ua-compatible" content="ie=edge" /> 
   <meta name="viewport" content="width=device-width" /> 
@@ -23,13 +23,13 @@
   <meta property="og:image" content="https://loreink.com/resources/keagan-henman-ufuk99qfqtg-unsplash.jpg" /> 
   <meta property="og:url" content="https://loreink.com/" /> 
   <title>Lore Ink</title> 
-  <link href="index.css?rwcache=777409227" media="all" rel="stylesheet" type="text/css" /> 
-  <script src="rw/elements/com.realmac.corepack/effectsTransforms.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/modal.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/alpine-store-filters.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/alpine-store-transitions.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/alpine-exit-intent.js?rwcache=777409227"></script> 
-  <script src="rw/elements/com.realmac.corepack/image-lightbox.js?rwcache=777409227"></script> 
+  <link href="index.css?rwcache=777410508" media="all" rel="stylesheet" type="text/css" /> 
+  <script src="rw/elements/com.realmac.corepack/effectsTransforms.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/modal.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/alpine-store-filters.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/alpine-store-transitions.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/alpine-exit-intent.js?rwcache=777410508"></script> 
+  <script src="rw/elements/com.realmac.corepack/image-lightbox.js?rwcache=777410508"></script> 
   <style lang="css">
     /* Required for alpine.js x-cloak directive to work */
     [x-cloak] {
@@ -55,7 +55,7 @@
         /* Firefox */
     }
 </style> 
-  <link rel="stylesheet" type="text/css" media="all" href="rw/styles/consolidated.css?rwcache=777409227" /> 
+  <link rel="stylesheet" type="text/css" media="all" href="rw/styles/consolidated.css?rwcache=777410508" /> 
  </head> 
  <body> 
   <div class="rw7E3BD341_3463_4A7D_9974_EFC224A93A42 group/container group/rw7E3BD341_3463_4A7D_9974_EFC224A93A42 [&amp;>*]:col-start-1 [&amp;>*]:row-start-1 grid w-full h-auto mt-0 mb-0 ml-auto mr-auto" data-filter-tags="" id=""> 
@@ -360,30 +360,34 @@
           <div class="z-0 transform-gpu overflow-hidden"> 
           </div> 
          </div>
-         <h1 class="[&amp;_a]:text-brand-500 [&amp;_a]:no-underline [&amp;_a]:font-[400] [&amp;_a:hover]:text-brand-800 [&amp;_a:hover]:no-underline [&amp;_a:hover]:font-[400] [&amp;_a:visited]:text-brand-800 [&amp;_a:visited]:no-underline [&amp;_a:visited]:font-[400] block w-auto h-auto text-text-100 text-opacity-[100%] dark:text-opacity-[100%] font-heading text-4xl font-[600] tracking-normal leading-none not-italic text-shadow-none normal-case whitespace-none text-left" id=""> Contact Us </h1>
-         <p class="[&amp;_a]:text-brand-500 [&amp;_a]:no-underline [&amp;_a]:font-[400] [&amp;_a:hover]:text-brand-800 [&amp;_a:hover]:no-underline [&amp;_a:hover]:font-[400] [&amp;_a:visited]:text-brand-800 [&amp;_a:visited]:no-underline [&amp;_a:visited]:font-[400] block w-auto h-auto text-text-400 text-opacity-[100%] dark:text-opacity-[100%] font-body text-lg font-[400] tracking-normal leading-normal not-italic text-shadow-none normal-case whitespace-none text-left" id=""> Enter your details and a description of your apparel project. </p>
-         <div class="block" id=""> 
-          <input type="text" id="name" name="name" placeholder="Your Name" class="ring-0 focus:ring-0 placeholder-text-700 text-text-400 font-body text-base w-[100%] h-auto mt-0 mb-0 ml-0 mr-0 pt-2 pb-2 pl-3.5 pr-3.5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-white-50 bg-opacity-[100%] dark:bg-opacity-[100%] border-t border-r border-b border-l border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-200/[100%] hover:border-t hover:border-r hover:border-b hover:border-l hover:rounded-tl hover:rounded-tr hover:rounded-bl hover:rounded-br hover:hover:solid hover:border-surface-500/[100%] focus:border-t focus:border-r focus:border-b focus:border-l focus:rounded-tl focus:rounded-tr focus:rounded-bl focus:rounded-br focus:hover:solid focus:border-surface-500/[100%]" /> 
-         </div>
-         <div class="block" id=""> 
-          <input type="email" id="email" name="email" placeholder="Your Email" required class="ring-0 focus:ring-0 placeholder-text-700 text-text-400 font-body text-base w-[100%] h-auto mt-0 mb-0 ml-0 mr-0 pt-2 pb-2 pl-3.5 pr-3.5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-white-100 bg-opacity-[100%] dark:bg-opacity-[100%] border-t border-r border-b border-l border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-200/[100%] hover:border-t hover:border-r hover:border-b hover:border-l hover:rounded-tl hover:rounded-tr hover:rounded-bl hover:rounded-br hover:hover:solid hover:border-surface-500/[100%] focus:border-t focus:border-r focus:border-b focus:border-l focus:rounded-tl focus:rounded-tr focus:rounded-bl focus:rounded-br focus:hover:solid focus:border-surface-500/[100%]" /> 
-         </div>
-         <div class="block" id=""> 
-          <textarea id="message" name="message" placeholder="Your Message" required class="ring-0 focus:ring-0 placeholder-text-700 text-text-400 font-body text-base w-[100%] h-auto mt-0 mb-0 ml-0 mr-0 pt-2 pb-2 pl-3.5 pr-3.5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-white-100 bg-opacity-[100%] dark:bg-opacity-[100%] border-t border-r border-b border-l border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-200/[100%] hover:border-t hover:border-r hover:border-b hover:border-l hover:rounded-tl hover:rounded-tr hover:rounded-bl hover:rounded-br hover:hover:solid hover:border-surface-500/[100%] focus:border-t focus:border-r focus:border-b focus:border-l focus:rounded-tl focus:rounded-tr focus:rounded-bl focus:rounded-br focus:hover:solid focus:border-surface-500/[100%]" rows="3"></textarea> 
-         </div>
-         <div class="" id="" x-bind="submit"> 
-          <button class="group/button group/rw45CC4705_D6FC_4FE1_AE6E_662FD35C48BD flex items-center cursor-pointer block w-auto h-auto mt-0 mb-0 ml-auto mr-0 pt-2.5 pb-2.5 pl-5 pr-5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-brand-500 bg-opacity-[100%] dark:bg-opacity-[100%] hover:bg-brand-600 hover:bg-opacity-[100%] dark:hover:bg-opacity-[100%] border-t-0 border-r-0 border-b-0 border-l-0 border-solid rounded-tl rounded-tr rounded-bl rounded-br border-brand-600/[100%] justify-center text-surface-50 text-opacity-[100%] dark:text-opacity-[100%] font-body text-base text-shadow-none font-[600] leading-normal tracking-normal normal-case hover:text-surface-50 hover:text-opacity-[100%] dark:hover:text-opacity-[100%] hover:text-shadow-none" id=""> Submit </button> 
+         <div id="" class="p-sm text-lg text-center text-brand-500">  
+          <div class=" group/flex transform flex w-full h-auto min-w-8 min-h-0 max-w-auto max-h-auto mt-0 mb-0 ml-0 mr-0 pt-10 pb-10 pl-10 pr-10 shadow opacity-[100%] bg-white-100 bg-opacity-[100%] dark:bg-opacity-[100%] border-t-0 border-r-0 border-b-0 border-l-0 border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-500/[100%] gap-x-5 gap-y-5 flex-col flex-nowrap items-stretch justify-items-normal content-normal justify-normal" data-filter-tags="" id=""> 
+           <h1 class="[&amp;_a]:text-brand-500 [&amp;_a]:no-underline [&amp;_a]:font-[400] [&amp;_a:hover]:text-brand-800 [&amp;_a:hover]:no-underline [&amp;_a:hover]:font-[400] [&amp;_a:visited]:text-brand-800 [&amp;_a:visited]:no-underline [&amp;_a:visited]:font-[400] block w-auto h-auto text-text-100 text-opacity-[100%] dark:text-opacity-[100%] font-heading text-4xl font-[600] tracking-normal leading-none not-italic text-shadow-none normal-case whitespace-none text-left" id=""> Contact Us </h1> 
+           <p class="[&amp;_a]:text-brand-500 [&amp;_a]:no-underline [&amp;_a]:font-[400] [&amp;_a:hover]:text-brand-800 [&amp;_a:hover]:no-underline [&amp;_a:hover]:font-[400] [&amp;_a:visited]:text-brand-800 [&amp;_a:visited]:no-underline [&amp;_a:visited]:font-[400] block w-auto h-auto text-text-400 text-opacity-[100%] dark:text-opacity-[100%] font-body text-lg font-[400] tracking-normal leading-normal not-italic text-shadow-none normal-case whitespace-none text-left" id=""> Enter your details and a description of your apparel project. </p> 
+           <div class="block" id=""> 
+            <input type="text" id="name" name="name" placeholder="Your Name" class="ring-0 focus:ring-0 placeholder-text-700 text-text-400 font-body text-base w-[100%] h-auto mt-0 mb-0 ml-0 mr-0 pt-2 pb-2 pl-3.5 pr-3.5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-white-50 bg-opacity-[100%] dark:bg-opacity-[100%] border-t border-r border-b border-l border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-200/[100%] hover:border-t hover:border-r hover:border-b hover:border-l hover:rounded-tl hover:rounded-tr hover:rounded-bl hover:rounded-br hover:hover:solid hover:border-surface-500/[100%] focus:border-t focus:border-r focus:border-b focus:border-l focus:rounded-tl focus:rounded-tr focus:rounded-bl focus:rounded-br focus:hover:solid focus:border-surface-500/[100%]" /> 
+           </div> 
+           <div class="block" id=""> 
+            <input type="email" id="email" name="email" placeholder="Your Email" required class="ring-0 focus:ring-0 placeholder-text-700 text-text-400 font-body text-base w-[100%] h-auto mt-0 mb-0 ml-0 mr-0 pt-2 pb-2 pl-3.5 pr-3.5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-white-100 bg-opacity-[100%] dark:bg-opacity-[100%] border-t border-r border-b border-l border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-200/[100%] hover:border-t hover:border-r hover:border-b hover:border-l hover:rounded-tl hover:rounded-tr hover:rounded-bl hover:rounded-br hover:hover:solid hover:border-surface-500/[100%] focus:border-t focus:border-r focus:border-b focus:border-l focus:rounded-tl focus:rounded-tr focus:rounded-bl focus:rounded-br focus:hover:solid focus:border-surface-500/[100%]" /> 
+           </div> 
+           <div class="block" id=""> 
+            <textarea id="message" name="message" placeholder="Your Message" required class="ring-0 focus:ring-0 placeholder-text-700 text-text-400 font-body text-base w-[100%] h-auto mt-0 mb-0 ml-0 mr-0 pt-2 pb-2 pl-3.5 pr-3.5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-white-100 bg-opacity-[100%] dark:bg-opacity-[100%] border-t border-r border-b border-l border-solid rounded-tl rounded-tr rounded-bl rounded-br border-surface-200/[100%] hover:border-t hover:border-r hover:border-b hover:border-l hover:rounded-tl hover:rounded-tr hover:rounded-bl hover:rounded-br hover:hover:solid hover:border-surface-500/[100%] focus:border-t focus:border-r focus:border-b focus:border-l focus:rounded-tl focus:rounded-tr focus:rounded-bl focus:rounded-br focus:hover:solid focus:border-surface-500/[100%]" rows="3"></textarea> 
+           </div> 
+           <div class="" id="" x-bind="submit"> 
+            <button class="group/button group/rw45CC4705_D6FC_4FE1_AE6E_662FD35C48BD flex items-center cursor-pointer block w-auto h-auto mt-0 mb-0 ml-auto mr-0 pt-2.5 pb-2.5 pl-5 pr-5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-brand-500 bg-opacity-[100%] dark:bg-opacity-[100%] hover:bg-brand-600 hover:bg-opacity-[100%] dark:hover:bg-opacity-[100%] border-t-0 border-r-0 border-b-0 border-l-0 border-solid rounded-tl rounded-tr rounded-bl rounded-br border-brand-600/[100%] justify-center text-surface-50 text-opacity-[100%] dark:text-opacity-[100%] font-body text-base text-shadow-none font-[600] leading-normal tracking-normal normal-case hover:text-surface-50 hover:text-opacity-[100%] dark:hover:text-opacity-[100%] hover:text-shadow-none" id=""> Submit </button> 
+           </div> 
+          </div>  
          </div> 
+        </div>
+       </form> 
+       <template x-teleport="body"> 
+        <div x-show="showApiCheck" class="fixed top-2 inset-x-2 rounded-md shadow z-[9999] isolate px-6 py-2.5" :class="apiCheckResponse?.success ? 'bg-green-500' : 'bg-red-500'"> 
+         <p class="text-white text-center font-semibold"> 
+          <svg viewbox="0 0 2 2" class="mx-2 inline size-0.5 fill-current" aria-hidden="true"> 
+           <circle cx="1" cy="1" r="1" /> 
+          </svg> <span x-text="apiCheckResponse?.message"></span> </p> 
         </div> 
-        <template x-teleport="body"> 
-         <div x-show="showApiCheck" class="fixed top-2 inset-x-2 rounded-md shadow z-[9999] isolate px-6 py-2.5" :class="apiCheckResponse?.success ? 'bg-green-500' : 'bg-red-500'"> 
-          <p class="text-white text-center font-semibold"> 
-           <svg viewbox="0 0 2 2" class="mx-2 inline size-0.5 fill-current" aria-hidden="true"> 
-            <circle cx="1" cy="1" r="1" /> 
-           </svg> <span x-text="apiCheckResponse?.message"></span> </p> 
-         </div> 
-        </template> 
-       </form>
+       </template> 
       </div> 
       <div class="z-0 transform-gpu overflow-hidden"> 
       </div> 
